Compilador/src/main/java/compilador/fuentes/cp+.jj
options {
	LOOKAHEAD=3;
	FORCE_LA_CHECK=true;
	STATIC=false;
}


PARSER_BEGIN(Parser)
	public class Parser{
	public static void main(String args[]) throws ParseException {
		Parser miParser = new Parser(System.in);
		miParser.programa();
	}
}
PARSER_END(Oscar2)


SKIP : {
	" "
	| "\t"
	| "\n"
	| "\r"
}

TOKEN [IGNORE_CASE] : {

	<tipo: ( "int" | "boolean" )>
	|<op: ("==" | "+")>
	|<elses: "else">
	|<ifs: "if">
	|<parIzquierdo: "(" >
	|<parDerecho: ")" >
	|<id: (["a"-"z"])+ (["0"-"9"]|["a"-"z"])*>
}

void programa():{}{
	(declaracionVariable() | statement())* <EOF>
}

void cale():{}{
	<ifs> <parIzquierdo> exprecion() <parDerecho> statement()
}

void declaracionVariable():{}{
	<tipo> <id> ";"
}

void exprecion():{}{
	<id> <op> <id>
	|<id>
}

void statement():{}{
	<ifs> <parIzquierdo> exprecion() <parDerecho> statement() <elses> statement()
	|"System.out.println" <parIzquierdo> exprecion() <parDerecho> ";"
	|<id> "=" exprecion() ";"
}
